# weather-app

./: .gitignore  README.md  README_zh-CN.md  capacitor.config.ts  electron-builder.yml  fix_locales.py  index.html  package-lock.json  package.json  tailwind.config.js  test_refactor.sh  verify_dnd.py  verify_refactor_v3.py  verify_search.py  verify_settings_reorder.py  vite.config.js  vite.config.ts
.Jules/: palette.md
.github/workflows/: build-android.yml  build.yml
.jules/: bolt.md
android/app/: build.gradle
benchmarks/: concurrency_benchmark.cjs  weather_benchmark.cjs
electron/: main.ts  preload.ts  tsconfig.json
src/: App.tsx  global.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ApiKeySettings.tsx  AutoLocationCard.test.tsx  AutoLocationCard.tsx  DashboardContextMenu.tsx  DashboardMenu.test.tsx  DashboardMenu.tsx  RelativeTime.tsx  SearchBar.test.tsx  SearchBar.tsx  SettingsModal.tsx  SortableWeatherCard.tsx  TitleBar.tsx  WeatherCard.test.tsx  WeatherCard.tsx  WeatherDashboard.autoLocation.test.tsx  WeatherDashboard.test.tsx  WeatherDashboard.tsx  WeatherDetail.tsx  WeatherIcon.test.tsx  WeatherIcon.tsx
src/contexts/: I18nContext.tsx
src/hooks/: useAutoLocation.ts  useDashboardContextMenu.ts  useFocusTrap.ts  useIsMaximized.ts  useWeatherAlerts.ts  useWeatherCities.ts  useWeatherDragDrop.ts  (+1 more)
verification/: verify_dashboard.py  verify_refactor.py  verify_time_format.py  verify_weatherapi_time.py
(+20 files in other folders)
