[package]
name = "weather-app"
version = "0.2.0"
description = "A beautiful cross-platform weather application"
authors = ["AirSodaz"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "weather_app_lib"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-window-state = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
